plugins {
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'com.mysql:mysql-connector-j:9.2.0'
	implementation 'commons-dbutils:commons-dbutils:1.8.1'
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
	implementation 'com.zaxxer:HikariCP:5.0.1'
	implementation 'software.amazon.awssdk:s3:2.20.150'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.686'

}

test {
	useJUnitPlatform()
}
